# spotted-arms

./: .dockerignore  AGENT.md  CLIPPY_ISSUE.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-ghcr.yml  docker.yml  docker.yml.example
modules/cloud-run/: README.md  cloud-init.py  main.tofu  runner.tofu  variables.tofu
src/: compute.rs  github.rs  instance.rs  lib.rs  metadata.rs  server.rs  telemetry.rs  utils.rs  webhook.rs
tests/: handler_flow.rs  webhook_integration.rs
tests/fixtures/: completed-payload.json  in-progress-payload.json  queued-payload.json
