[package]
name = "spotted-arms"
edition = "2024"
version = "0.1.0"
rust-version = "1.89.0"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros"] }
axum-github-webhook-extract = "0.3.0"
clap = { version = "4.5.53", features = ["derive", "env", "unicode"] }
gcloud-sdk = { version = "0.28.3", features = ["google-rest-compute-v1"] }
http = "1.4.0"
octocrab = "0.48.1"
opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry-gcloud-trace = "0.22.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace", "experimental_trace_batch_span_processor_with_async_runtime"] }
pid1 = "0.1.5"
reqwest = { version = "0.12.25", default-features = false, features = ["http2", "rustls-tls-webpki-roots", "json", "stream"] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
tower = "0.5.2"

[build-dependencies]
# Use latest versions as requested
vergen = { version = "9.0.6", features = ["cargo"] }
vergen-gitcl = "1.0.8"
