[package]
name = "spotted-arms"
edition = "2024"
version = "0.1.0"
rust-version = "1.89.0"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros"] }
axum-github-webhook-extract = "0.3.0"
clap = { version = "4.5.60", features = ["derive", "env", "unicode"] }
gcloud-sdk = { version = "0.28.5", features = ["google-rest-compute-v1"] }
http = "1.4.0"
octocrab = "0.49.5"
opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry-gcloud-trace = "0.22.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace", "experimental_trace_batch_span_processor_with_async_runtime"] }
pid1 = "0.1.5"
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "rustls-tls-webpki-roots", "json", "stream"] }
rustls = { version = "0.23.36", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
tower = "0.5.3"

[build-dependencies]
# Use latest versions as requested
vergen = { version = "10.0.0-beta.5", features = ["cargo"] }
vergen-gitcl = "10.0.0-beta.5"
